--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -288,7 +288,10 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>log4j-over-slf4j</artifactId>
 		</dependency>
-		
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-to-slf4j</artifactId>
+		</dependency>
 		<!--
 			Java APIs from Tomcat:
 			We stick to 8.0.38 because they are only APIs and we can
