--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,8 @@
         <elasticsearch.version>5.3.0</elasticsearch.version>
         <elasticsearch-client-transport.version>5.3.0</elasticsearch-client-transport.version>
         <jackson.version>2.8.6</jackson.version> <!-- same version used by elasticsearch -->
-        <log4j-to-slf4j.version>2.7</log4j-to-slf4j.version> <!-- same version used by elasticsearch -->
+        <log4j-to-slf4j.version>2.8.2</log4j-to-slf4j.version>
+        <log4j2-mock.version>0.0.1</log4j2-mock.version>
         <!-- Plugins versions -->
         <checkstyle-maven-plugin.version>2.17</checkstyle-maven-plugin.version>
         <checkstyle.version>7.6.1</checkstyle.version>
@@ -798,6 +799,16 @@
                 <groupId>org.slf4j</groupId>
                 <artifactId>log4j-over-slf4j</artifactId>
                 <version>${slf4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-to-slf4j</artifactId>
+                <version>${log4j-to-slf4j.version}</version>
+            </dependency>
+            <dependency>
+            <groupId>de.dentrassi.elasticsearch</groupId>
+                <artifactId>log4j2-mock</artifactId>
+                <version>${log4j2-mock.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.yaml</groupId>
